--- a/package.json
+++ b/package.json
@@ -28,7 +28,13 @@
     "@angular/forms": "^20.3.0",
     "@angular/platform-browser": "^20.3.0",
     "@angular/router": "^20.3.0",
+    "@primeuix/themes": "^2.0.1",
+    "@tailwindcss/postcss": "^4.1.17",
+    "lucide-angular": "^0.555.0",
+    "postcss": "^8.5.6",
+    "primeng": "^20.3.0",
     "rxjs": "~7.8.0",
+    "tailwindcss": "^4.1.17",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
